11.1/mase.md
|  |  |  |
| --- | --- | --- |
| NSCL DAQ Software Documentation |
| Prev |  | Next |


---

# <a name="vmusb3-mase"></a>mase

<a name="AEN58325"></a>## Name

mase -- Support for XLM with MASE firmware.

<a name="AEN58328"></a>## Synopsis

**mase create *name ?options?*
**

**mase config *name ?options?*
**

**mase cget *name*
**

<a name="AEN58338"></a>## DESCRIPTION

The **mase** command allows you to create and configure
	      modules that are XLM-VV FGPA modules with firmware for the
	      Indiana MASE data acqusitiopn subsystem.  Please note that this
	      modules is a block mode device, in the sense that each
	      VM-USB trigger may result in multiple events being present in the
	      XLM memory by the time the VM-USB reads the data.  When used with
	      other modules, you must arrange for event building at some point
	      in the system to ensure that data from the MASE module are coherently
	      assembled with data from other devices.

The module object is created via the **create**
	      subcommand.  The `name` on this defines
	      a unique name which will be used to refer to this module in
	      future commands directed at it.  The optional options are
	      name value pairs used to configure the module.  See
	      OPTIONS below for a list of the supported options.

The **config** subcommand can be used to set or modify
	      configuration parameters after the module is created.  The
	      `name` is the name of the module as defined
	      by the **create** subcommand.   The options are
	      once more name value pairs that are described in the OPTIONS section
	      below.

The **cget** subcommand is can be used to ask
	      a module about its current configuration.  The module configuration is
	      returned as a Tcl list of name value pairs where the name is the
	      name of a configuration option described in the OPTIONS section
	      and the value is the value of that configuration parameter.

<a name="AEN58351"></a>## OPTIONS



`-base` *base-address*Supplies the base address of the XLM module.  The XLM base
		       address is determined by the slot it occupies in a VME
		       backplane with V430 extensions (V430 supplies additional
		       voltages and the slot location on a middle 'JAUX' connector).
		       The base address must be an unsigned integer.  There is no
		       default value for this configuration option.  The value
		       supplied must match the actual board's base address.

The XLM-VV must be used in a V430 backplane as it has no other
		       mechanism for the board to set the base address.
		       For information about the JAUX connector see e.g.
		       [http://cdsweb.cern.ch/record/1201456/files/Blanchetti_001.pdf](http://cdsweb.cern.ch/record/1201456/files/Blanchetti_001.pdf)
		       Specifically page 10 and page 25 and beyond.

`-firmware` *firmware-path**firmware-path* provides the path
		       to the XLM firmware file.  In the MASE module, the firmware
		       is loaded prior to the start of a run.  The file path
		       can be relative or absolute, however environment variables
		       and tilde expansions are not performed by the module driver.
		       The Tcl script however may use the **file normalilze**
		       and the `envname` to perform these substitutions
		       prior to providing the final filename to this option.

---

|  |  |  |
| --- | --- | --- |
| Prev | Home | Next |
| madcscaler | Up | tdc1x90 |
